<resources>
    <string name="app_name">Promptimize</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example_title">Grammar correction</string>
    <string name="prompt_desc">Convert ungrammatical statements into standard English.</string>
    <string name="prompt_example">You will be provided with statements, and your task is to convert them to standard English. She no went to the market.</string>
    <string name="search_command">Search example...</string>
    <string name="one">1</string>
    <string name="lesson_description"></string>
    <string name="lesson_explanation"></string>
    <string name="lesson_example">She did not go to the market.</string>
    <string name="report_bug">Report Bug</string>
    <string name="share_app">Share App</string>
    <string name="app_version">v%1$s</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="example">Sample response</string>
    <string name="daily_notification">Daily Notification (%1$s)</string>
    <string name="source_code">Source Code</string>
    <string name="developer">About Developer</string>
    <string name="dialog_text">Sorry, An unexpected error occurred.\n\nDo you want to send a crash report to the developer?</string>
    <string name="dialog_title">Crash Report</string>
    <string name="dialog_positive">Send</string>
    <string name="dialog_negative">Cancel</string>
    <string name="font_size_setting">Font Size Setting</string>
    <string name="preview">Preview</string>
    <string name="title">Title</string>
    <string name="command">Prompt</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="english_default">English (Default)</string>
    <string name="indonesia">Indonesia</string>
    <string name="language_setting">Language Setting</string>
    <string name="quiz">Quiz</string>
    <string name="test_learn_excel">Test | Learn | Excel</string>
    <string name="level_up_your_skill">Level Up your skill</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="quiz_question">A prompt is any input or ________ that helps generative AI models produce relevant and logical responses.</string>
    <string name="quiz_choice1">Series of Instruction</string>
    <string name="check_answer">Check Answer</string>
    <string name="next_question">Next Question</string>
    <string name="finish">Finish</string>
    <string name="remaining_questions">%1$d/%2$d</string>
    <string name="about_developer">About Developer</string>
    <string name="group">Kelompok 12</string>
    <string name="bio">Naura Salsabila 2217051079 | Pradya Hening Pertiwi 2217051005 | Dini Soraya 2217051107 | Dian Prinatama Silaban 2217051137 | M. Fikri Bara Akbar 2057051025</string>
    <string name="member">Nama Anggota Kelompok:</string>
    <string name="d_class">Kelas D</string>
    <string name="last_quiz_result">Last Quiz Result</string>
    <string name="_10">10</string>
</resources>